<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_search"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigationAddPost"
        android:icon="@drawable/ic_add_post"
        android:title="@string/title_addRecipe"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigationProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"/>


</menu>